maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
def tracechemin(x:Int,y:Int,nb:Int):Boolean = {
^JediEscaper:2: error: expected class or object definition
def tracechemin(x:Int,y:Int,nb:Int):Boolean = {
^JediEscaper:38: error: expected class or object definition
def getBisctuit() {
^JediEscaper:49: error: expected class or object definition
def yaller(){
^JediEscaper:60: error: Missing closing brace `}' assumed here
  }
  ^JediEscaper:65: error: Missing closing brace `}' assumed here
  }
  ^JediEscaper:70: error: Missing closing brace `}' assumed here
  }
  ^